--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<link 
-			rel="preload" 
+		<link
+			rel="preload"
 			href="/Poppins-Regular.ttf"
-			as="font" 
-			type="font/ttf" 
-			crossorigin
-		>
+			as="font"
+			type="font/ttf"
+			crossorigin />
 		<link
 			rel="icon"
 			type="image/png"
@@ -22,6 +21,18 @@
 		<meta
 			name="viewport"
 			content="width=device-width, initial-scale=1.0" />
+		<meta
+			property="og:image"
+			content="/tv-512.png" />
+		<meta
+			name="twitter:image"
+			content="/tv-256.png" />
+		<meta
+			name="twitter:card"
+			content="/tv-512.png" />
+		<meta
+			property="og:type"
+			content="website" />
 		<title>animehub.dev</title>
 	</head>
 	<body>
