updated ui of search, home, profile components

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 			href="/Poppins-Regular.ttf"
 			as="font"
 			type="font/ttf"
-			crossorigin />
+			crossorigin="anonymous" />
 		<link
 			rel="icon"
 			type="image/png"
