--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
+		<meta
+			name="robots"
+			content="index,follow" />
+		<meta
+			http-equiv="X-UA-Compatible"
+			content="IE=edge" />
 		<link
 			rel="preload"
 			href="/Poppins-Regular.ttf"
@@ -19,6 +25,9 @@
 			rel="manifest"
 			href="/manifest.json" />
 		<meta
+			http-equiv="content-language"
+			content="en-us" />
+		<meta
 			name="viewport"
 			content="width=device-width, initial-scale=1.0" />
 		<meta
@@ -33,7 +42,38 @@
 		<meta
 			property="og:type"
 			content="website" />
-		<title>animehub.dev</title>
+		<meta
+			property="og:site_name"
+			content="animehub-dev" />
+		<meta
+			property="og:image"
+			content="https://animehub-dev.netlify.app/tv-512.png" />
+		<meta
+			property="og:image:secure_url"
+			content="https://animehub-dev.netlify.app/tv-512.png" />
+		<meta
+			property="og:instagram"
+			content="https://www.instagram.com/shilohgeorge18/" />
+		<meta
+			property="og:facebook"
+			content="https://www.facebook.com/shiloh.george.395" />
+		<meta
+			name="keywords"
+			content="animehub, animehub-dev, Naruto, naruto, , One piece, Anime streaming, anime rental,	watch anime online, stream anime episodes, rent anime series, high-quality anime, anime rentals, latest anime releases, Anime recommendations, popular anime series, new anime episodes,	Anime streaming service, discover new anime, hottest anime shows, anime binge-watching, anime catalog, watch anime movies, stream popular anime, animehub-dev streaming" />
+		<meta
+			name="description"
+			content="animehub: Your go-to for renting, streaming, and enjoying top-notch anime content. Discover new releases, dive into captivating storytelling." />
+		<title>animehub-dev | Experience anime like never before</title>
+		<script type="application/ld+json">
+			{
+				"@context": "https://schema.org",
+				"@type": "WebSite",
+				"name": "animehub",
+				"url": "https://animehub-dev.netlify.app/",
+				"description": "animehub is your ultimate destination for renting, watching, and streaming high-quality anime content. Explore our extensive catalog of latest and hottest anime releases, discover new series, and immerse yourself in the world of captivating storytelling.",
+				"sameAs": ["https://www.facebook.com/shiloh.george.395", "https://twitter.com/shiloh_george4", "https://www.instagram.com/shilohgeorge18/"]
+			}
+		</script>
 	</head>
 	<body>
 		<main id="root"></main>
