formatted the main content for seo

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 			content="https://www.facebook.com/shiloh.george.395" />
 		<meta
 			name="keywords"
-			content="animehub, animehub-dev, Naruto, naruto, , One piece, Anime streaming, anime rental,	watch anime online, stream anime episodes, rent anime series, high-quality anime, anime rentals, latest anime releases, Anime recommendations, popular anime series, new anime episodes,	Anime streaming service, discover new anime, hottest anime shows, anime binge-watching, anime catalog, watch anime movies, stream popular anime, animehub-dev streaming" />
+			content="animehub, animehub-dev, Naruto, naruto, One piece, Anime streaming, anime rental,	watch anime online, stream anime episodes, rent anime series, high-quality anime, anime rentals, latest anime releases, Anime recommendations, popular anime series, new anime episodes,	Anime streaming service, discover new anime, hottest anime shows, anime binge-watching, anime catalog, watch anime movies, stream popular anime, animehub-dev streaming" />
 		<meta
 			name="description"
 			content="animehub: Your go-to for renting, streaming, and enjoying top-notch anime content. Discover new releases, dive into captivating storytelling." />
